# SingedIn

./: .gitignore  README.md
SingedIn/: .gitignore  package-lock.json  package.json
SingedIn/src/: App.jsx
backend/: encoding_check.py  lyrics.py  missed_songs.py  package.json  server.js  tempCodeRunnerFile.js
backend/rag/: ingest.py  lang.py  query.py  test.py
fast-backend/: main.py  pyproject.toml
fast-backend/files/: missing_songs.json
fast-backend/helpers/: lyrics_helper.py  spotify_helper.py
fast-backend/utilities/: chatbot.py  chroma_setup.py  language_detect.py  lyrics.py
frontend/: components.json  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: AboutPage.tsx  AppSidebar.tsx  ChatResponse.tsx  ConnectSpotify.jsx  ControlBar.tsx  CopyText.tsx  FormattedMessage.tsx  LandingPage.tsx  NavBar.tsx  PromptInputBox.tsx  RichTextRenderer.tsx
frontend/src/components/ui/: textarea.tsx
frontend/src/store/: chatStore.ts
frontend/src/styles/: prose.css
